Removed dummy confirmation images.

--- a/templates/register.html
+++ b/templates/register.html
@@ -50,7 +50,7 @@
 		</fieldset>
 
 		<div class="form-actions">
-			 <button name="register" type="submit" class="btn btn-primary">Register</button>
+			<button name="register" type="submit" class="btn btn-primary"><i class="icon-user"></i> Register</button>
 		</div>
 	</form>
 {% endblock %}
