--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
 	<p>If you've already registered your child or children, please proceed to <a href="/checkout">checkout</a> in order to complete your registration.</p>
 
-	<a href="/register" class="btn btn-primary btn-large">Register Player</a>
+	<a href="/register" class="btn btn-primary btn-large"><i class="icon-user"></i> Register Player</a>
 	<a href="/checkout" class="btn btn-large"><i class="icon-shopping-cart"></i> Checkout</a>
 
 	{% else %}
@@ -19,8 +19,8 @@
 
 	<p>If you already have an account and would like to register a player, please <a href="/login">login</a>.</p>
 
-	<a href="/signup" class="btn btn-primary btn-large">Register</a>
-	<a href="/login" class="btn btn-large">Login</a>
+	<a href="/signup" class="btn btn-primary btn-large"><i class="icon-user"></i> Register</a>
+	<a href="/login" class="btn btn-large"><i class="icon-signin"></i> Login</a>
 	{% endif %}
 </div>
 {% endblock %}
