Updated UI to not allow users to checkout without registering a player first.

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,17 @@
 	{% if current_user.is_authenticated() %}
 	<h1>Welcome, {{ current_user.first_name }}!</h1>
 
-	<p>Please use the following links in order to <a href="/register">register</a> one or more children for our summer sports program.</p>
+	<p>Please use the following link in order to <a href="/register">register</a> one or more children for our summer sports program.</p>
 
-	<p>If you've already registered your child or children, please proceed to <a href="/checkout">checkout</a> in order to complete your registration.</p>
+	{% if current_user.players.count() > 0 %}
+		<p>If you've already registered your child or children, please proceed to <a href="/checkout">checkout</a> in order to complete your registration.</p>
+	{% endif %}
 
 	<a href="/register" class="btn btn-primary btn-large"><i class="icon-user"></i> Register Player</a>
-	<a href="/checkout" class="btn btn-large"><i class="icon-shopping-cart"></i> Checkout</a>
+
+	{% if current_user.players.count() > 0 %}
+		<a href="/checkout" class="btn btn-large"><i class="icon-shopping-cart"></i> Checkout</a>
+	{% endif %}
 
 	{% else %}
 
