Added legalese, updated some form UI, etc.

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 
 	<h1>Hello!</h1>
 
-	<p>Welcome to our online registration system.  If you haven't already, please <a href="/signup">register for an account</a> in order to register your child or children for our summer sports program.</p>
+	<p>Welcome to the online registration system for Oshawa N.A.S.C. Soccer & Softball.  If you haven't already, please <a href="/signup">register for an account</a> in order to register your child or children for our summer sports program.</p>
 
 	<p>If you already have an account and would like to register a player, please <a href="/login">login</a>.</p>
 
