--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 							<li><a href="#"><span class="badge">3</span> Verify</a></li>
 						{% endif %}
 					{% else %}
-					<li><a href="/signup">Register</a></li>
+						<li><a href="/signup">Sign Up</a></li>
 					{% endif %}
 				</ul>
 			</div><!--/.nav-collapse -->
@@ -58,6 +58,8 @@
 </div>
 
 <div class="container">
+	<noscript>This site will not function correctly without JavaScript enabled.  Please enable JavaScript in order to register.</noscript>
+
 	{% with messages = get_flashed_messages(with_categories=True) %}
 		{% if messages %}
 			{% for category, message in messages %}
@@ -74,6 +76,8 @@
 {% endblock %}
 
 {% block bootstrap_js_bottom %}
+<p class="muted" style="text-align: center">Problems?  Questions?  Email us at <a href="mailto:register@nascsoccer.org">register@nascsoccer.org</a>.</p>
+
 {{ super() }}
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/knockout/2.2.0/knockout-min.js"></script>
