Hopefully fixed some bugs, clarified wording, added email notifications to admin about certain events.

--- a/templates/_soccer_legal.html
+++ b/templates/_soccer_legal.html
@@ -1,4 +1,4 @@
-<textarea disabled="disabled" style="width:100%; font-family: monospace;" rows="10">
+<textarea style="width:100%; font-family: monospace;" rows="10">
 Consent for Use of Personal Information
 
 I authorize the Canadian Soccer Association, Ontario Soccer Association, Durham Region S.A., and Oshawa N.A.S.C. Soccer to collect and use personal information about me or my child/ward for the purpose of receiving communications from the Canadian Soccer Association, Ontario Soccer Association, District, League, and Club.
@@ -17,7 +17,7 @@ We do not sell or distribute your personal information to any other third party 
 
 <hr>
 
-<textarea disabled="disabled" style="width:100%; font-family: monospace;" rows="10">
+<textarea style="width:100%; font-family: monospace;" rows="10">
 Acceptance of Terms and Conditions (Under 18)
 
 In consideration of the acceptance of my child/ward's membership in the Ontario Soccer Association, District Association and Club, I, the parent/guardian (for the participant under 18 years of age), agree as follows:
@@ -33,7 +33,7 @@ By signing and dating below, you agree that you are the parent or legal guardian
 
 <hr>
 
-<textarea disabled="disabled" style="width:100%; font-family: monospace;" rows="10">
+<textarea style="width:100%; font-family: monospace;" rows="10">
 Acceptance of Terms and Conditions (Over 18)
 
 In consideration of the acceptance of my child/ward's membership in the Ontario Soccer Association, District Association and Club, I, the participant, agree as follows:
@@ -47,7 +47,7 @@ By signing and dating below, you agree that you are the player being registered 
 
 <hr>
 
-<textarea disabled="disabled" style="width:100%; font-family: monospace;" rows="10">
+<textarea style="width:100%; font-family: monospace;" rows="10">
 Participant's Agreement (Under 18)
 
 IN CONSIDERATION of allowing my minor child/ward to participate in the programs, activities and events of The Ontario Soccer Association, I ASSURE YOU THAT:
@@ -89,7 +89,7 @@ By signing and dating below, you agree that you are the parent or legal guardian
 
 <hr>
 
-<textarea disabled="disabled" style="width:100%; font-family: monospace;" rows="10">
+<textarea style="width:100%; font-family: monospace;" rows="10">
 Participant's Agreement (Over 18)
 
 1.	This is a binding legal agreement.  As a Participant in the programs, activities and events of the Ontario Soccer Association, their Districts, Leagues and Clubs, the undersigned acknowledges and agrees to the following terms.
@@ -128,7 +128,7 @@ By signing and dating below, you agree that you are the parent or legal guardian
 
 <hr>
 
-<textarea disabled="disabled" style="width:100%; font-family: monospace;" rows="10">
+<textarea style="width:100%; font-family: monospace;" rows="10">
 Parents Responsibilities:
 
 1.	To support your child/children with encouragement and insist upon sportsmanship.
@@ -139,7 +139,7 @@ Parents Responsibilities:
 
 <hr>
 
-<textarea disabled="disabled" style="width:100%; font-family: monospace;" rows="10">
+<textarea style="width:100%; font-family: monospace;" rows="10">
 Neighbourhood Associations Sports Committee Agreement
 
 1.	The sport listed on this form, which the N.A.S.C. volunteers co-ordinate, are not without risk of personal injury.  While every effort is made to ensure your child has a safe, enjoyable season, there still remains the element of risk inherent in this activity.  The nature of this activity includes risks related to practices, games, and tournaments, travel to and from locations, weather, condition of equipment and facilities.  By signing below I certify that I will abide by the N.A.S.C. SPORTS RULES and I am the parent or legal guardian of the above named child, and acknowledge the risks stated above.
