--- a/templates/_softball_legal.html
+++ b/templates/_softball_legal.html
@@ -1,4 +1,4 @@
-<textarea disabled="disabled" style="width:100%; font-family: monospace;" rows="10">
+<textarea style="width:100%; font-family: monospace;" rows="10">
 Parents Responsibilities:
 
 1.	To support your child/children with encouragement and insist upon sportsmanship.
@@ -9,7 +9,7 @@ Parents Responsibilities:
 
 <hr>
 
-<textarea disabled="disabled" style="width:100%; font-family: monospace;" rows="10">
+<textarea style="width:100%; font-family: monospace;" rows="10">
 Neighbourhood Associations Sports Committee Agreement
 
 1.	The sport listed on this form, which the N.A.S.C. volunteers co-ordinate, are not without risk of personal injury.  While every effort is made to ensure your child has a safe, enjoyable season, there still remains the element of risk inherent in this activity.  The nature of this activity includes risks related to practices, games, and tournaments, travel to and from locations, weather, condition of equipment and facilities.  By signing below I certify that I will abide by the N.A.S.C. SPORTS RULES and I am the parent or legal guardian of the above named child, and acknowledge the risks stated above.
