--- a/templates/signup.html
+++ b/templates/signup.html
@@ -44,6 +44,8 @@
 				</label>
 			</div>
 		</div>
+
+		<strong>If you do not receive email confirmation from us within a few minutes, please check your spam folder.</strong>
 		
 		<div class="form-actions">
 			 <button name="register" type="submit" class="btn btn-primary">Register</button>
