--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,7 @@
 
 {% block bootstrap_js_bottom %}
 <p class="muted" style="text-align: center">Problems?  Questions?  Email us at <a href="mailto:register@nascsoccer.org">register@nascsoccer.org</a>.</p>
+<p class="muted" style="text-align: center">Secured with 128-bit high-grade encryption <script src="https://www.startssl.com/validation.js"></script></p>
 
 {{ super() }}
 
