--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -21,7 +21,13 @@
 		<strong>Total ${{ "%0.2f"|format((total / 100)|float) }}</strong>
 
 		<form action="/checkout" method="post">
-			<script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button" data-key="{{ key }}" data-label="Register" data-description="Registration fees" data-amount="{{ total }}"></script>
+			<script src="https://checkout.stripe.com/v2/checkout.js"
+				class="stripe-button"
+				data-key="{{ key }}"
+				data-label="Secure Checkout"
+				data-amount="{{ total }}"
+				data-name="Summer Sports Registration"
+				data-description="Registration Fees (${{ "%0.2f"|format((total / 100)|float) }})"></script>
 		</form>
 
 		<h3>Fees</h3>
