--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,12 @@
 {{ super() }}
 
 <link rel="stylesheet" type="text/css" href="/static/assets/css/datepicker.css">
+
+<style type="text/css">
+	.indent {
+		margin-left: 1em;
+	}
+</style>
 {% endblock %}
 
 {% block body_content %}
@@ -77,7 +83,7 @@
 
 {% block bootstrap_js_bottom %}
 <p class="muted" style="text-align: center">Problems?  Questions?  Email us at <a href="mailto:register@nascsoccer.org">register@nascsoccer.org</a>.</p>
-<p class="muted" style="text-align: center">Secured with 128-bit high-grade encryption <script src="https://www.startssl.com/validation.js"></script></p>
+<p class="muted" style="text-align: center">Secured with 128-bit high-grade encryption (<a href="https://www.startssl.com/validation.ssl?referrer=register.nascsoccer.org"><i class="icon-lock"></i> verify</a>)</p>
 
 {{ super() }}
 
