--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -12,6 +12,8 @@
 </style>
 {% endblock %}
 
+{% block title %}Summer Sports Registration :: {{ title }}{% endblock %}
+
 {% block body_content %}
 <div class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
