--- a/register/templates/signup.html
+++ b/register/templates/signup.html
@@ -32,7 +32,7 @@
 		<div class="control-group">
 			<div class="controls">
 				<label class="checkbox">
-					<input id="marketing" name="marketing" type="checkbox"> I'd like to receive emails from N.A.S.C. Soccer, Softball, and their affiliates
+					<input id="marketing" name="marketing" type="checkbox" checked> I'd like to receive emails from N.A.S.C. Soccer, Softball, and their affiliates
 				</label>
 			</div>
 		</div>
@@ -56,6 +56,7 @@
 {% block bootstrap_js_bottom %}
 {{ super() }}
 <script>
+$("#postal_code").mask("a9a 9a9");
 $("#primary_phone").mask("(999) 999-9999");
 $("#secondary_phone").mask("(999) 999-9999");
 </script>
