--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -6,9 +6,9 @@
 <link rel="stylesheet" type="text/css" href="/static/assets/css/datepicker.css">
 
 <style type="text/css">
-	.indent {
-		margin-left: 1em;
-	}
+  .indent {
+    margin-left: 1em;
+  }
 </style>
 {% endblock %}
 
@@ -16,76 +16,82 @@
 
 {% block body_content %}
 <div class="navbar navbar-fixed-top">
-	<div class="navbar-inner">
-		<div class="container">
-			<a class="brand" href="/">Summer Sports Registration</a>
-			<div class="nav-collapse">
-				<ul class="nav">
-					<li><a href="/">Home</a></li>
-					{% if current_user.is_authenticated() %}
-						<li><a href="/register"><span class="badge badge-inverse">1</span> Register Player</a></li>
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="brand" href="/">Summer Sports Registration</a>
+      <div class="nav-collapse">
+        <ul class="nav">
+          <li><a href="/">Home</a></li>
+          {% if current_user.is_authenticated() %}
+            <li><a href="/register"><span class="badge badge-inverse">1</span> Register Player</a></li>
 
-						{% if current_user.players.count() > 0 %}
-							<li><a href="/checkout"><span class="badge badge-inverse">2</span> Checkout</a></li>
-						{% else %}
-							<li><a href="#"><span class="badge">2</span> Checkout</a></li>
-						{% endif %}
+            {% if current_user.players.count() > 0 %}
+              <li><a href="/checkout"><span class="badge badge-inverse">2</span> Checkout</a></li>
+            {% else %}
+              <li><a href="#"><span class="badge">2</span> Checkout</a></li>
+            {% endif %}
 
-						{% if current_user.customer_id %}
-							<li><a href="/verify"><span class="badge badge-inverse">3</span> Verify</a></li>
-						{% else %}
-							<li><a href="#"><span class="badge">3</span> Verify</a></li>
-						{% endif %}
-					{% else %}
-						<li><a href="/signup">Sign Up</a></li>
-					{% endif %}
-				</ul>
-			</div><!--/.nav-collapse -->
+            {% if current_user.customer_id %}
+              <li><a href="/verify"><span class="badge badge-inverse">3</span> Verify</a></li>
+            {% else %}
+              <li><a href="#"><span class="badge">3</span> Verify</a></li>
+            {% endif %}
+          {% else %}
+            <li><a href="/signup">Sign Up</a></li>
+          {% endif %}
+        </ul>
+      </div><!--/.nav-collapse -->
 
-			<ul class="nav pull-right">
-				<li class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown">
-						{% if current_user.is_authenticated() %}
-						{{ current_user.get_full_name() }}
-						{% else %}
-						Guest
-						{% endif %}
-						<i class="caret"></i>
-					</a>
-					<ul class="dropdown-menu">
-						{% if current_user.is_authenticated() %}
-						<li><a href="/logout"><i class="icon-signout"></i> Logout</a></li>
-						{% else %}
-						<li><a href="/login"><i class="icon-signin"></i> Login</a></li>
-						{% endif %}
-					</ul>
-				</li>
-			</li>
-		</div>
-	</div>
+      <ul class="nav pull-right">
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown">
+            {% if current_user.is_authenticated() %}
+            {{ current_user.get_full_name() }}
+            {% else %}
+            Guest
+            {% endif %}
+            <i class="caret"></i>
+          </a>
+          <ul class="dropdown-menu">
+            {% if current_user.is_authenticated() %}
+            <li><a href="/logout"><i class="icon-signout"></i> Logout</a></li>
+            {% else %}
+            <li><a href="/login"><i class="icon-signin"></i> Login</a></li>
+            {% endif %}
+          </ul>
+        </li>
+      </li>
+    </div>
+  </div>
 </div>
 
 <div class="container">
-	<noscript>This site will not function correctly without JavaScript enabled.  Please enable JavaScript in order to register.</noscript>
+  <noscript>This site will not function correctly without JavaScript enabled.  Please enable JavaScript in order to register.</noscript>
 
-	{% with messages = get_flashed_messages(with_categories=True) %}
-		{% if messages %}
-			{% for category, message in messages %}
-			<div class="alert{% if category == 'error' %} alert-error{% else %} alert-success{% endif %}">
-				<button type="button" class="close" data-dismiss="alert">&times;</button>
-				{{ message }}
-			</div>
-			{% endfor %}
-		{% endif %}
-	{% endwith %}
+  {% with messages = get_flashed_messages(with_categories=True) %}
+    {% if messages %}
+      {% for category, message in messages %}
+      <div class="alert{% if category == 'error' %} alert-error{% else %} alert-success{% endif %}">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+      </div>
+      {% endfor %}
+    {% endif %}
+    {% endwith %}
 
-	{% block content %}{% endblock %}
+    {% if current_user.is_authenticated() %}
+      <div class="alert alert-info">
+        <strong>Receipts</strong> If you've completed the verification step, your receipt for the <a href="http://www.fin.gov.on.ca/en/credit/catc/">Children's Activity Tax Credit</a> can be accessed <a href="/api/receipt/">here</a>.
+      </div>
+    {% endif %}
+
+  {% block content %}{% endblock %}
 </div>
 {% endblock %}
 
 {% block bootstrap_js_bottom %}
 <p class="muted" style="text-align: center">Problems?  Questions?  Email us at <a href="mailto:register@nascsoccer.org">register@nascsoccer.org</a>.</p>
-<p class="muted" style="text-align: center">Secured with 128-bit high-grade encryption (<a href="https://www.startssl.com/validation.ssl?referrer=register.nascsoccer.org"><i class="icon-lock"></i> verify</a>)</p>
+<p class="muted" style="text-align: center">Secured with 128-bit high-grade encryption (<a href="https://www.startssl.com/validation.ssl?referrer=register.nascsoccer.org"><i class="icon-lock"></i> validate</a>)</p>
 
 {{ super() }}
 
