Added notification about soccer online registration ending.

--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -85,6 +85,10 @@
       </div>
     {% endif %}
 
+    <div class="alert alert-info">
+      <strong>Soccer Registration</strong> Online registration for soccer has ended.  Please visit an <a href="http://nascsoccer.org/house-league/registration/">in-person registration</a> in order to register for our soccer program.
+    </div>
+
   {% block content %}{% endblock %}
 </div>
 {% endblock %}
